[tool.poetry]
name = "fyco"
version = "0.1.0"
description = "Execution Flows - Function Composition Framework"
authors = ["Vinko Buble <vinkobuble@gmail.com>"]
readme = "README.md"
license = { file = "LICENSE" }

[tool.poetry.dependencies]
python = ">3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
