[tool.poetry]
name = "fyco"
version = "0.1.0"
description = "Execution Flows - Function Composition Framework"
authors = ["Vinko Buble <vinkobuble@gmail.com>"]
readme = "README.md"
license = "MPL2"

[tool.poetry.dependencies]
python = ">3.10"


[tool.poetry.group.dev.dependencies]
mypy = "1.11.1"
pre-commit = "3.8.0"
ruff = "0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
